# gobgp-rir-sync

./: Cargo.toml  README.md  config.toml.example
examples/: gobgp_route_test.rs
src/: gobgp.rs  main.rs
src/config/: cli.rs  mod.rs  types.rs
src/models/: country.rs  mod.rs  rir.rs  route.rs  scheduler.rs
src/utils/: command.rs  logger.rs  mod.rs
