[package]
name = "gobgp-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.11"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
