[package]
name = "gobgp-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "deflate"] }
serde = { version = "1", features = ["derive"] }

log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tonic = "0.14.6"
prost = "0.14.3"
tonic-prost = "0.14.6"
